refactor(Application): remove redundant catch for IllegalArgumentException